# Awesome-ai-agents

./: .gitignore  README.md
A2A/language-learning-academy/: README.md  pyproject.toml
A2A/language-learning-academy/scripts/: start_full_ui.py
A2A/language-learning-academy/src/language_learning_academy/agent/: executor.py
A2A/language-learning-academy/src/language_learning_academy/server/: main.py
A2A/language-learning-academy/src/language_learning_academy/ui/: streamlit_app.py
agno/mythical_creature_designer_agent/: README.md  mythical_creature_designer_agent.py  requirements.txt
agno/research_paper_agent/: README.md  agent.py  app.py  data_models.py  requirements.txt  utils.py
langgraph/memory-agent_simple/: README.md  graph.py  langgraph.json  requirements.txt
openai-sdk/voice-agents/bed_time_story_agent/: README.md  app.py  requirements.txt  voice_agent.py
openai-sdk/voice-agents/receipe_helper_agent/: README.md  app.py  requirements.txt  voice_agent.py
openai-sdk/voice-agents/voice-rag/: README.md  app.py  requirements.txt  voice_agent.py
